--- a/bp-templates/shared/styles/_bp_group_header.scss
+++ b/bp-templates/shared/styles/_bp_group_header.scss
@@ -2,6 +2,11 @@
 
 .groups-header {
 
+	.bp-feedback {
+		clear: both;
+	}
+
+
 	// The admin & mod list display for a group.
 	// 'moderators-lists' is used to refer to
 	// generic members with elevated access.
